<resources>
    <string name="app_name">appMasaCorporal</string>
    <string name="enter_password">Ingresa tu contraseña</string>
    <string name="login">Iniciar sesión</string>
    <string name="incorrect_password">Contraseña incorrecta, por favor intenta de nuevo</string>
    <string name="hint_altura">Altura (cm)</string>
    <string name="hint_peso">Peso (kg)</string>
    <string name="boton_calcular">Calcular IMC</string>
    <string name="resultado">Resultado</string>
    <string name="welcome_message">Hola, bienvenido</string>
    <string name="loading_message">Estamos cargando...</string>
    <string name="about_button_text">Acerca de</string>
    <string name="about_author">Desarrollado por Omar Hualpa.</string>
    <string name="about_info">Esta es una aplicación para calcular el Índice de Masa Corporal (IMC), basada en las recomendaciones de la OMS.</string>
    <string name="enter_username">Ingrese su usuario</string>
    <string name="incorrect_credentials">"Lo sentimos, su usuario o contraseña son incorrectos "</string>
    <string name="fill_all_fields">Por favor, lleno los campos de usuario y contraseña</string>
    <string name="register">Registrarse</string>
    <string name="back_to_login">Volver al inicio de sesión</string>
    <string name="logout">Cerrar sesión</string>
    <string name="viewhistory">Ver historial</string>
    <string name="fecha">Fecha</string>
    <string name="peso">Peso</string>
    <string name="altura">Altura</string>
    <string name="imc">IMC</string>
    <string name="concepto">Concepto</string>
    <string name="historial_imc">Historial de usuario</string>
    <string name="no_historial">No history available</string>

</resources>