<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Imagen del logo de la app -->
    <ImageView
        android:id="@+id/oms_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginBottom="24dp"
        android:src="@drawable/ic_app_logo" />

    <!-- Campo de entrada del nombre de usuario -->
    <EditText
        android:id="@+id/usernameField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/text_primary"
        android:elevation="2dp"
        android:hint="@string/enter_username"
        android:inputType="text"
        android:padding="12dp"
        android:textColor="@color/text_primary"
        android:textColorHint="@color/hint_color" />

    <!-- Campo de entrada de la contraseña -->
    <EditText
        android:id="@+id/passwordField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/text_primary"
        android:elevation="2dp"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="@color/text_primary"
        android:textColorHint="@color/hint_color" />

    <!-- Botón de registro -->
    <Button
        android:id="@+id/registerButton"
        style="@style/MyButtonStyle"
        android:text="@string/register" />

    <!-- Enlace para volver a la pantalla de inicio de sesión -->
    <TextView
        android:id="@+id/backToLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/back_to_login"
        android:textColor="@color/primary"
        android:textSize="16sp" />
</LinearLayout>
